--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="content">
           <h6>Our Campus</h6>
           <p>Find which campus is close by you</p>
-          <a href="link">Read more</a>
+          <a href="#">Read more</a>
         </div>
       </div>
       <div class="lecture box">
@@ -83,7 +83,7 @@
         <div class="content">
           <h6>Our guest lecture</h6>
           <p>Join a keynote with Oliver Sack about music in medical treatment</p>
-          <a href="link">Read more</a>
+          <a href="#">Read more</a>
         </div>
       </div>
     </div>
